# CPP-FYP-Proj

./: .gitignore  README  docker-compose.yaml
compiler-server-service/: Dockerfile  main.py  pyproject.toml  scratch-file.txt  scratch.py  scripts.py  tempCodeRunnerFile.py
compiler-server-service/compiler_server_service/: scripts.py  utilities.py
compiler-server-service/compiler_server_service/cpp_compiler/: cpp_compiler_revised.py  doctest_output_parser.py  process_results.py
compiler-server-service/compiler_server_service/cpp_compiler_module/: cpp_compiler.py  doctest_output_parser.py  process_results.py
compiler-server-service/compiler_server_service/data/: tutorial_data.json
compiler-server-service/compiler_server_service/limiter/: rate_limiter.py
compiler-server-service/compiler_server_service/routers/: chat_query_handlers.py  chat_topic_handlers.py  cpp_handlers.py  exam_paper_handlers.py  exam_solution_handlers.py  faq_handlers.py  game_handlers.py  notebook_handlers.py  notes_handlers.py  open_ai_handlers.py  openai_handlers.py  post_body_templates.py  python_handlers.py  quiz_handlers.py  quiz_question_handlers.py  resource_comment_handlers.py  resource_handlers.py  resource_rating_handlers.py  templates.py  tutorial_handlers.py  user_handlers.py  video_resource_handlers.py
compiler-server-service/compiler_server_service/services/: chat_query_dao.py  chat_topic_dao.py  db_dao.py  exam_paper_dao.py  exam_solution_dao.py  faq_dao.py  game_manager.py  grader.py  notebook_dao.py  notes_dao.py  open_ai_dao.py  open_api_dao.py  quiz_dao.py  quiz_question_dao.py  resource_comment_dao.py  resource_dao.py  resource_rating_dao.py  tutorial_dao.py  tutorial_dataloader.py  user_dao.py  video_resource_dao.py
compiler-server-service/data/: syntax_error_challenge.yaml  tutorial_data.json  tutorial_data.yaml
compiler-server-service/data/notebooks/: instructions1-1.txt  instructions1-2.txt  instructions1-6.txt  notebook1-1.txt  notebook1-2.txt  notebook1-3.txt  notebook1-6.txt  notebook1-7.txt  notebook1-8.txt  notebook1.txt  notebook2-1.txt  notebook2-10.txt  notebook2-2.txt  notebook2-3.txt  notebook2-4.txt  notebook2-5.txt  notebook2-6.txt  notebook2-7.txt  notebook2-8.txt  notebook2-9.txt  notebook2.txt  notebook3-1.txt  notebook3-2.txt  notebook3-3.txt  notebook3-4.txt  notebook3-5.txt  notebook3.txt  notebook4-1.txt  notebook4-2.txt  notebook4.txt  notebook5.txt  notebook_format.txt  test_notebook.txt
compiler-server-service/src/: utilities.py
compiler-server-service/src/cpp_compiler_module/: compile_results.py  cpp_compiler.py  doctest_output_parser.py
compiler-server-service/src/routers/: cpp_handlers.py
compiler-server-service/tests/: test_cpp_compiler.py  test_cpp_compiler__revised.py  test_notebook_dao.py  test_tutorial_dataloader_and_grader.py  test_users.py  test_utilities.py  utilities.py
compiler-server-service/tests/cpp_files_for_testing/: testcases_for_truck.cpp
compiler-server-service/tests/mocks/: user_data_mock.py
cpp-language-module (deprec)/: CMakeLists.txt  car.cpp  run.bat  test.cpp  todo.cpp
game_service/: Dockerfile  main.py  pyproject.toml  scripts.py
(+143 files in other folders)
