[tool.poetry]
name = "compiler-server-module"
version = "0.1.0"
description = ""
authors = ["zhuweiji <55840431+zhuweiji@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.81.0"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
