[tool.poetry]
name = "compiler-server-service"
version = "0.1.0"
description = ""
authors = ["zhuweiji <55840431+zhuweiji@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.81.0"}
gunicorn = "^20.1.0"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "scripts:start"
test = "scripts:test"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format ='%(name)s-%(levelname)s|%(lineno)d:  %(message)s'